--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "autoprefixer": "^10.4.20",
+        "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.4.0",
         "tailwindcss": "^3.4.15"
     }
 }
